--- a/index.html
+++ b/index.html
@@ -7,22 +7,21 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-  <h1>Spotify Playlist Backup</h1>
+  <h1>Spotify Playlist Backup Service</h1>
 
   <button id="login-btn">Login with Spotify</button>
 
-  <div id="input-container" style="display:none;">
-    <input type="text" id="playlist-id" placeholder="Enter Spotify Playlist ID">
+  <div id="input-container">
+    <input type="text" id="playlist-id" placeholder="Paste playlist URL or ID here">
     <button id="fetch-btn">Fetch Playlist</button>
   </div>
 
   <div id="playlist-container"></div>
-  <button id="download-btn" style="display:none;">Download CSV</button>
+  <button id="download-btn" style="display:none;">Download Backup</button>
 
   <button id="theme-toggle" title="Toggle Theme">
     <i class="fas fa-adjust"></i>
   </button>
-
   <script src="app.js"></script>
 </body>
 </html>
