--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <button id="login-btn">Login with Spotify</button>
 
   <div id="input-container">
-    <input type="text" id="playlist-id" placeholder="Paste playlist URL or ID here">
+    <input type="text" id="playlist-id" placeholder="Paste playlist URL">
     <button id="fetch-btn">Fetch Playlist</button>
   </div>
 
@@ -25,4 +25,5 @@
   <script src="app.js"></script>
 </body>
 </html>
+
 
